--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,9 @@ jobs:
       - name: Install dependencies
         run: yarn install
       - name: Build
-        run: yarn run build
+        run: | 
+          cd decor-gator/frontend
+          yarn run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
