--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ concurrency:
 jobs:
   # Single deploy job since we're just deploying
   deploy:
+    defaults:
+      run:
+        working-directory: ./frontend
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -35,13 +38,10 @@ jobs:
         with:
           node-version: 18
           cache: 'yarn'
-          cache-dependency-path: frontend/yarn.lock
       - name: Install dependencies
         run: yarn install
       - name: Build
-        run: | 
-          cd decor-gator-v2/frontend
-          yarn run build
+        run: yarn run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
