--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,6 @@ concurrency:
 jobs:
   # Single deploy job since we're just deploying
   deploy:
-    defaults:
-      run:
-        working-directory: ./frontend
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -38,8 +35,11 @@ jobs:
         with:
           node-version: 18
           cache: 'yarn'
+          cache-dependency-path: frontend/yarn.lock
       - name: Install dependencies
-        run: yarn install
+        run: |
+          cd ./frontend
+          yarn install
       - name: Build
         run: yarn run build
       - name: Setup Pages
