--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,9 @@ jobs:
           cd ./frontend
           yarn install
       - name: Build
-        run: yarn run build
+        run: |
+          cd ./frontend
+          yarn run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
