--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/node": "^18.16.0",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
