--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,15 @@
     "@types/node": "^18.16.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "confetti-explosion-react": "^0.1.2",
     "gh-pages": "^5.0.0",
+    "history": "^5.3.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
+    "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0"
+    "react-router-dom": "^6.10.0",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
