--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^18.16.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.1",
     "confetti-explosion-react": "^0.1.2",
     "gh-pages": "^5.0.0",
