--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.1",
+    "browserify": "^17.0.0",
     "confetti-explosion-react": "^0.1.2",
     "gh-pages": "^5.0.0",
     "history": "^5.3.0",
@@ -24,9 +25,11 @@
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
+    "requirejs": "^2.3.6",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
