--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,10 @@
     "confetti-explosion-react": "^0.1.2",
     "gh-pages": "^5.0.0",
     "history": "^5.3.0",
+    "jose": "^4.14.4",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18.2.0",
