--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^2.8.0",
     "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^2.1.2",
+    "react-cookie": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "requirejs": "^2.3.6",
